[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cvnss-converter"
version = "0.1.0"
description = "CVNSS 4.0 Converter (CQN -> CVN -> CVNSS/CVSS)"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "CVNSS" }]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
cvnss4 = ["converter.js", "mapping.json"]
